--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -317,6 +317,10 @@ html[lang=en] {
         @media screen and (max-width: $break - 1px) {
             background-image: none;
             background-color: #2c2c2c;
+
+            > ul.navbar-nav {
+                margin: 0;
+            }
         }
     }
 }
